# myapp-ddd-ryax

./: .gitignore  app.py  checkall.sh  container.py  pyproject.toml
application/: TodoService.py
domain/: TodoEntry.py
infrastructure/: TodoEntries.py
infrastructure/api/: TodoEntrySchema.py  setup.py  todo_controller.py
infrastructure/database/: test_todo_entry_repository.py
